# galaxias-python

./: CHANGELOG.md  README.md
docs/: conf.py  make.bat  (+1 more)
galaxias/: README.md  dwc_terms.csv  eml.xml  metadata.md  metadata_template.md  poetry.lock.bak  pyproject.toml  report_basic.md  report_verbose.md  setup.cfg  setup.py
galaxias/docs/: Makefile  conf.py  example.ipynb
galaxias/galaxias/: LICENSE
galaxias/src/galaxias/: __init__.py  basisOfRecord_values.py  build_subelement.py  check_data_functions.py  common_dictionaries.py  common_functions.py  config.ini  countryCode_values.py  dwc_data.py  dwca_build.py  dwca_report.py  event_terms.py  metadata.py  occurrence_terms.py  report_verbose.md
galaxias/src/galaxias.egg-info/: PKG-INFO  SOURCES.txt
galaxias/src/galaxias/dwca/: base_dwca.py  core_dwca.py  dwca_factory.py  dwca_meta.py  large_dwca.py
galaxias/src/galaxias_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
galaxias/tests/: test_ALA.py  test_create_dwca.py  test_galaxias.py  test_make_dir.py  test_metadata.py  test_set_abundance.py  test_set_collection.py  test_set_coordinates.py  test_set_datetime.py  test_set_individual_traits.py  test_set_license.py  test_set_locality.py  test_set_observer.py  test_set_occurrences.py  test_set_scientific_name.py  test_set_taxonomy.py
galaxias/tests/Amanda_testing/: testing.py
galaxias/tests/Amanda_testing/dwca_data/: eml.xml  meta.xml  metadata.md
galaxias/tests/data_for_testing/: data.csv  events_duplicate.csv  extendedMeasurementOrFact_typo.csv  multimedia_occ_typo.csv  occurrence_dwc_multi_clean.csv  occurrences_event_nomulti.csv  temp.csv
galaxias/tests/dwca_data_occ/: meta.xml
galaxias/tests/dwca_data_occ/data_raw/: occurrences_dwc_rename.csv
galaxias/tests/dwca_data_occ_emof/: meta.xml
galaxias/tests/dwca_data_occ_emof/data_processed/: extendedMeasurementOrFact.csv
galaxias/tests/dwca_data_occ_emof_mm/data_raw/: extendedMeasurementOrFact.csv  multimedia_event.csv
galaxias/tests/dwca_data_occ_mm/: meta.xml
galaxias/tests/dwca_data_occ_mm/data_processed/: multimedia.csv  occurrences.csv
galaxias/tests/dwca_data_occ_mm_emof/: eml.xml  meta.xml
galaxias/tests/dwca_events/: meta.xml
galaxias/tests/more_testing/: test.py
(+139 files in other folders)
