[tool.poetry]
name = "galaxias"
version = "0.1.0"
description = "Code repository for the galaxias-python package, which will create Darwin Core Archives and ship them to the ALA"
authors = ["Atlas of Living Australia"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
